# pomodoro-tauri

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  spec.md  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/legacy-reference/: README.md
scripts/: set-version.mjs
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  reminder.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: idle_time.rs  mod.rs
src/adapters/: env.ts  idle.ts  storage.ts
src/app/: router.ts
src/components/: AppTitleBar.vue  ReminderView.vue  SettingsPanel.vue  TimerControls.vue  WaveBackground.vue
src/composables/: useNotifications.ts  useUpdater.ts  useWindowControls.ts
src/domain/: format.ts  reminder.ts  timerStateMachine.ts  validation.ts  wave.ts
src/stores/: settings.ts  timer.ts
src/types/: settings.ts  timer.ts
src/views/: MainView.vue
tests/unit/: format.test.ts  reminder.test.ts  timerStateMachine.test.ts  validation.test.ts  wave.test.ts
